
syntax = "proto3";

package acap;
option java_package = "acap.model";
option java_outer_classname = "LaneMessageProtocol";

message LaneMessage {
	double offset = 1;
	double orientation = 2;
}

message LaneMessageSingle {
	LaneMessage laneMessage1 = 1;
}

message LaneMessageDouble {
	LaneMessage laneMessage1 = 1;
	LaneMessage laneMessage2 = 2;
}